# solara

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml
.github/workflows/: build-cinnamon.yml  build-kde.yml  build-kde.yml.bak  build-lxqt.yml  build-pantheon.yml  build.yml  pages.yml
ben-chat-remastered/: LICENSE  README.md  boss_battle.py  main.py  main_demo.py  main_original.py
docs-src/: index.html  package-lock.json  package.json  vite.config.js
docs-src/src/: App.jsx  index.css
installer/: Cargo.toml
installer/crates/installer-core/: Cargo.toml
installer/crates/installer-core/src/: disk.rs  flavor.rs  fs.rs  gpu.rs  grub.rs  lib.rs  locale.rs  pacstrap.rs  plan.rs  steps.rs
installer/crates/installer-gui/: Cargo.toml  build.rs
installer/crates/installer-gui/qml/: Main.qml
installer/crates/installer-gui/qml/components/: Heading.qml  StepButton.qml
installer/crates/installer-gui/qml/pages/: Disk.qml  Done.qml  Install.qml  Locale.qml  Partition.qml  Summary.qml  System.qml  User.qml  Welcome.qml
installer/crates/installer-gui/src/: bridge.rs  main.rs
releng/: customize_airootfs.sh  packages.cinnamon  packages.lxqt  packages.pantheon  packages.x86_64  pacman.conf  profiledef.sh
releng/airootfs/etc/: group  issue  motd  os-release  passwd  shadow
releng/airootfs/etc/calamares/: settings.conf
releng/airootfs/etc/lightdm/lightdm.conf.d/: 50-autologin.conf
releng/airootfs/etc/mkinitcpio.conf.d/: archiso.conf
releng/airootfs/etc/mkinitcpio.d/: solara-kernel.preset
releng/airootfs/etc/plasmalogin.conf.d/: autologin.conf
releng/airootfs/etc/sddm.conf.d/: autologin.conf
releng/efiboot/loader/entries/: 01-archiso-linux.conf  02-archiso-speech-linux.conf
releng/grub/: grub.cfg  loopback.cfg
releng/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_sys-linux.cfg  archiso_sys.cfg
scripts/: build-iso.sh  test-iso.sh
(+9 files in other folders)
