[workspace]
resolver = "2"
members = [
    "crates/installer-core",
    "crates/installer-gui",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/celestiafoundation/solara"
rust-version = "1.85"

[workspace.dependencies]
installer-core = { path = "crates/installer-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# cxx-qt 0.7 targets Qt 6.5+ which matches qt6-base on current Arch.
cxx-qt = "0.7"
cxx-qt-lib = "0.7"
cxx-qt-build = "0.7"
cxx = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
